--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./app.js"
+    "start": "node ./app.js",
+    "dummy": "node ./dummy.js"
   },
   "dependencies": {
     "debug": "~2.6.9",
