Open TCP Socket on request, multiple clients support and broadcast implemented

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./app.js",
+    "nodemon": "nodemon ./app.js",
+    "debug": "node --inspect ./app.js",
     "dummy": "node ./dummy.js"
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
-    "eslint-plugin-react-hooks": "^2.5.1"
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "nodemon": "^2.0.2"
   }
 }
